--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -1,66 +1,142 @@
-.homeContainer {
-  margin: 0 13%;
-}
 .sectionHome {
-  margin-top: 4rem;
+  margin: 0 13.5%;
 }
+
 .profile {
-  width: 300px;
+  width: 160px;
   border-radius: 50%;
-  margin: auto;
   box-shadow: 5px 5px 12px 2px rgb(189, 187, 187);
 }
-.headSection {
-  width: 700px;
-}
+/* .headSection {
+  width: 65%;
+} */
+
 .sectionHome {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  text-align: center;
 }
 .heading1 {
   font-size: 44px;
   font-weight: 800;
   line-height: 60px;
+  word-spacing: 3px;
+  letter-spacing: 2px;
 }
 .paragraph {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 28px;
   margin: 1rem 0;
+  word-spacing: 3px;
+  letter-spacing: 1px;
 }
 .btn {
-  width: 160px;
-  height: 40px;
-  color: black;
-  margin-top: 0.6rem;
-  border: 0.5px solid black;
-  background-color: black;
-  color: white;
-  border-radius: 3px;
+  width: 220px;
+  height: 50px;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #111;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 800;
   cursor: pointer;
-  margin-bottom: 1.5rem;
+  margin-top: 1rem;
 }
-.btn:hover {
+/* button hover */
+.btn:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+.btn:active {
+  color: #000;
+}
+.btn:active:after {
+  background: transparent;
+}
+.btn:hover:before {
+  opacity: 1;
+}
+.btn:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #111;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+/* .btn:hover {
   background-color: white;
   color: black;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.3s ease;
+} */
+.heading2 {
+  margin: 1rem 0;
+  font-size: 2rem;
 }
-.skillsHeading {
-  margin: 2rem 0;
-  margin-bottom: 1rem;
-}
+/* SKILLS : images for skills and tools */
 .skill {
-  width: 45px;
+  width: 40px;
   margin: 0 0.5rem;
 }
-
 .js,
 .redux {
-  width: 37px;
+  width: 34px;
   margin: 0 0.5rem;
   margin-bottom: 5px;
 }
 .figma {
-  width: 30px;
+  width: 28px;
   margin: 0 1rem;
+}
+/* CONTACT : images  */
+.contact {
+  width: 26px;
+  margin: 0 0.7rem;
+}
+.mail {
+  width: 30px;
+  margin: 0 0.7rem;
+  margin-bottom: 2px;
+}
+/* copyright */
+.heading5 {
+  margin: 2rem 0;
 }
