--- a/src/components/Projects/styles.module.css
+++ b/src/components/Projects/styles.module.css
@@ -13,7 +13,7 @@
 }
 .website {
   width: 100%;
-  padding: 1rem;
+  padding: 2rem;
 }
 .part2 {
   width: 40%;
@@ -56,4 +56,5 @@
   margin: 0 10px;
   font-size: 2rem;
   cursor: pointer;
+  color: black;
 }
