--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -1,7 +1,6 @@
 .sectionHome {
   margin: 0 13.5%;
 }
-
 .profile {
   width: 160px;
   border-radius: 50%;
@@ -10,7 +9,6 @@
 /* .headSection {
   width: 65%;
 } */
-
 .sectionHome {
   text-align: center;
 }
@@ -20,6 +18,7 @@
   line-height: 60px;
   word-spacing: 3px;
   letter-spacing: 2px;
+  margin-top: 1rem;
 }
 .paragraph {
   font-size: 18px;
@@ -139,4 +138,17 @@
 /* copyright */
 .heading5 {
   margin: 2rem 0;
+}
+@media (max-width: 1100px) {
+  .heading1 {
+    margin-top: 1rem;
+    font-size: 32px;
+    line-height: 50px;
+    word-spacing: 0px;
+    letter-spacing: 0px;
+  }
+  .paragraph {
+    word-spacing: 1px;
+    letter-spacing: 0px;
+  }
 }
