--- a/src/components/Projects/styles.module.css
+++ b/src/components/Projects/styles.module.css
@@ -61,6 +61,7 @@
   margin: 0 5px;
   border: 1px solid black;
   border-radius: 3px;
+  cursor: default;
 }
 .span:hover {
   background-color: #000000;
