--- a/src/components/Projects/styles.module.css
+++ b/src/components/Projects/styles.module.css
@@ -58,7 +58,7 @@
 }
 .span {
   padding: 5px;
-  margin: 0 5px;
+  margin: 5px;
   border: 1px solid black;
   border-radius: 3px;
   cursor: default;
